--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Joseph Fabian Collaguazo Lalangui</h1>
+    <p> Soy una persona que le gusta jugar futbol y ecuavoley en mis tiempos libres pasao con mis amigos jugando y viendo peliculas mi equipo favorito es el Fc Barcelona y siempre miro sus partidos me gusta mucho el reggateon</p>
+    <p> mis Hobbies es ir al gimnasio y jugar futbol no soy tan buen jugador pero me gusta mucho entrenar otro de is hobbies es tocar guitarra no se tocar como profesional pero si se algunas canciones romanticas tambien me gusta pasear</p>
+    <p> Me gradue de bachiller en el colegio maria mazzarello me gusta mucho la tecnologia ahora me encuentro en la Universidad Catolica del Ecuador y quiero sacar mi titulo en tecnologia en software despues conseguir una maestria o una ingenieria</p>
+    <a https://github.com/Jo53phcll>Github de Jo53phcll</a>
+    
 </body>
 </html>
